# py-gen-ml

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/snippets/: pyproject.toml  regenerate.sh
docs/snippets/data/: imdb_sentiment_seeds.json
docs/snippets/proto/: bentoml_demo.proto  flywheel_demo.proto  lancedb_demo.proto  litserve_demo.proto  proto_intro.proto  sentiment_demo.proto  tracking_demo.proto
snippets/: index.html  pyproject.toml  sweep_dataloader.db
snippets/proto/: lancedb_demo.proto  sentiment_demo.proto
snippets/src/cli-demo-docs/: index.html
snippets/src/pgml_out/: advanced_sweep.py  bentoml_demo_bentoml.py  builder_custom_class_demo_sweep.py  builder_demo_base.py  cli_demo_cli_args.py  cli_demo_deep_cli_args.py  cli_demo_deep_entrypoint.py  cli_demo_deep_patch.py  cli_demo_deep_sweep.py  cli_extension_demo_cli_args.py  cli_extension_demo_patch.py  cli_extension_demo_sweep.py  dataloader_patch.py  default_enum_sweep.py  flywheel_demo_base.py  flywheel_demo_patch.py  lancedb_demo_base.py  lancedb_demo_sweep.py  litserve_demo_base.py  litserve_demo_litserve.py  litserve_demo_patch.py  litserve_demo_sweep.py  mlp_sweep.py  oneof_demo_patch.py  oneof_demo_sweep.py  proto_intro_base.py  proto_intro_cli_args.py  sentiment_demo_base.py  sentiment_demo_lancedb.py  sentiment_demo_mlflow.py  sentiment_demo_pydantic_ai.py  sentiment_demo_sweep.py  tracking_demo_mlflow.py
snippets/src/snippets/: bentoml_serve_demo.py  lancedb_torch_demo.py  sentiment_online_demo.py
(+205 files in other folders)
