[project]
name = "snippets"
version = "0.1.0"
description = "Documentation snippets for py-gen-ml"
requires-python = ">=3.9"
dependencies = [
    "py-gen-ml",
    "torch==2.0.1",
]

[project.optional-dependencies]
lancedb = [
    "lancedb>=0.17.0",
]
bentoml = [
    "bentoml>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgml_out", "src/snippets"]

[tool.uv.sources]
py-gen-ml = { workspace = true }
